--- a/WebConfigGenerator/src/locale/sk-SK.json
+++ b/WebConfigGenerator/src/locale/sk-SK.json
@@ -1,28 +1,28 @@
 {
-    "app.name": "",
-    "button.advanced": "",
-    "button.download": "",
-    "home.topic": "",
-    "link.asf": "",
-    "link.bot": "",
-    "link.home": "",
-    "schema.access": "",
-    "schema.advanced": "",
-    "schema.basic": "",
-    "schema.bot.SteamLogin.description": "",
-    "schema.bot.SteamPassword.description": "",
-    "schema.bot.name": "",
-    "schema.bot.name.description": "",
-    "schema.community": "",
-    "schema.connection": "",
-    "schema.customization": "",
-    "schema.farming": "",
-    "schema.generic.steamid64": "",
-    "schema.misc": "",
-    "schema.performance": "",
-    "schema.remote_access": "",
-    "schema.security": "",
-    "schema.trading": "",
-    "schema.updates": "",
-    "static.add": ""
+    "app.name": "ASF Config Generator",
+    "button.advanced": "Zobraziť rozšírené možnosti",
+    "button.download": "Stiahnuť",
+    "home.topic": "ASF Config Generator je jednoduchý nástroj napísaný v jazyku JavaScript, ktorý pomáha pri vytváraní konfiguračných súborov do ASF. Po stiahnutí vygenerovaného súboru je nutné presunúť ho do priečinka <var>config</var>, ktorý sa nachádza vo vnútri hlavného ASF priečinka. Pre plnú dokumentáciu klikni na <a href=\"https://github.com/JustArchi/ArchiSteamFarm/wiki/Configuration\" target=\"_blank\" rel=\"noopener\">wiki</a>. Dúfame, že tento tool pre teba bude užitočný.",
+    "link.asf": "ASF",
+    "link.bot": "Bot",
+    "link.home": "Domovská stránka",
+    "schema.access": "Prístup",
+    "schema.advanced": "Rozšírené",
+    "schema.basic": "Základné",
+    "schema.bot.SteamLogin.description": "Steam prihlasovacie meno",
+    "schema.bot.SteamPassword.description": "Steam prihlasovacie heslo",
+    "schema.bot.name": "Meno",
+    "schema.bot.name.description": "Meno bota",
+    "schema.community": "Komunita",
+    "schema.connection": "Pripojenie",
+    "schema.customization": "Vlastné nastavenie",
+    "schema.farming": "Farmenie",
+    "schema.generic.steamid64": "Tvoj SteamID64",
+    "schema.misc": "Rôzne",
+    "schema.performance": "Výkon",
+    "schema.remote_access": "Vzdialený prístup",
+    "schema.security": "Zabezpečenie",
+    "schema.trading": "Obchodovanie",
+    "schema.updates": "Aktualizácie",
+    "static.add": "Pridať"
 }
