--- a/WebConfigGenerator/src/locale/de-DE.json
+++ b/WebConfigGenerator/src/locale/de-DE.json
@@ -2,13 +2,13 @@
     "app.name": "ASF Config Generator",
     "button.advanced": "Erweiterte Einstellungen aktivieren",
     "button.download": "Herunterladen",
-    "home.topic": "Der ASF Config Generator ist ein kleines in JavaScript geschriebenes Hilfsprogramm, welches dir hilft deine ASF Konfigurations Dateien zu erstellen. Nach dem Herunterladen der generierten Config, verschiebe diese in den <var>Config-</var>Ordner im ASF Hauptverzeichnis. Für die komplette Dokumentation beziehe dich auf unser <a href=\"https://github.com/JustArchi/ArchiSteamFarm/wiki/Configuration\" target=\"_blank\" rel=\"noopener\">Wiki</a>. Wir hoffen, dass unser Hilfsprogramm nützlich für dich sein wird.",
+    "home.topic": "Der ASF Config Generator ist ein kleines in JavaScript geschriebenes Hilfsprogramm, welches dir hilft deine ASF Konfigurations Dateien zu erstellen. Nach dem Herunterladen der generierten Datei, verschiebe diese in den <var>Config-</var>Ordner im ASF Hauptverzeichnis. Für die komplette Dokumentation beziehe dich auf unser <a href=\"https://github.com/JustArchi/ArchiSteamFarm/wiki/Configuration\" target=\"_blank\" rel=\"noopener\">Wiki</a>. Wir hoffen, dass unser Hilfsprogramm nützlich für dich sein wird.",
     "link.asf": "ASF",
     "link.bot": "Bot",
     "link.home": "Startseite",
     "schema.access": "Zugang",
     "schema.advanced": "Erweitert",
-    "schema.basic": "Grundlage",
+    "schema.basic": "Standard",
     "schema.bot.SteamLogin.description": "Deine Steam-Konto Anmeldedaten",
     "schema.bot.SteamPassword.description": "Dein Steam-Konto Passwort",
     "schema.bot.name": "Name",
